# spm-project-2025

./: .gitignore  Makefile  README.md  farm_example  farm_example.cpp  main  main.cpp  map_reduce_example  map_reduce_example.cpp  meson.build  shell.nix  template_example  template_example.cpp
apps/: meson.build
apps/ff_single_node/: main.cpp  meson.build
apps/mpi_ff_multi_node/: main.cpp
apps/mpi_omp_multi_node/: main.cpp
apps/omp_single_node/: main.cpp  meson.build
apps/sequential_single_node/: main.cpp  meson.build
examples/: Makefile  farm_example.cpp  farm_pattern_example  farm_pattern_example.cpp  map_reduce_example.cpp  mpi_example  mpi_example.cpp  omp_example  omp_example.cpp  template_example.cpp
include/: cli_parser.hpp  memory_arena.hpp  parallel_sorter.hpp  record.hpp  record_loader.hpp  stop_watch.hpp  thread_safe_queue.hpp  utils.hpp
scripts/: run_ff_tests.sh  run_mpi_tests.sh  run_omp_tests.sh  run_sequential_tests.sh
src/: main.cpp  meson.build  record_loader.cpp  utils.cpp
tests/: memory_arena_test.cpp  meson.build
tools/: create_file.cpp  meson.build  read_file.cpp
typst/: main.typ
